css fix for buy now button alignment on home page slides on mobile

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -831,8 +831,8 @@ hr {
 }
 
 #fullpage .product-main {
-    .buy-button,
-    .more-info {
+    .col-sm-12 .buy-button,
+    .col-sm-12 .more-info {
         margin: 6px 0;
     }
 }
